add funciton in CMakeLists.txt

--- a/cmake_cmds/CMakeLists.txt
+++ b/cmake_cmds/CMakeLists.txt
@@ -2,12 +2,11 @@
 set(VAR1 "hello")
 message(STATUS "VAR1 is " ${VAR1})
 # to be modified by the child
+# changed by -DVAR2=hello_world_2 in as cmake flags
+
 add_subdirectory(cmd1)
 message(STATUS "VAR1 is " ${VAR1})
 message(STATUS "VAR3 is " ${VAR3})
-
-
-# scope of var1
 
 # define a global variable var2
 # set(VAR2 "hello global var2")
@@ -22,12 +21,11 @@ message(STATUS ${CMAKE_SOURCE_DIR})
 
 include(../cmake/utils.cmake)
 
-# changed by -DVAR2=hello_world_2 in as cmake flags
-
 set(FOO_VAR_PARENT "var parent")
 message(STATUS "foo1, foo_var_parent is " ${FOO_VAR_PARENT})
 
 function(Foo1)
+    message(STATUS "foo1 is called")
     # access the local variable outside of the scope of the function 
     message(STATUS "foo1, var1 is " ${VAR1})
     # define a local variable inside the function
@@ -53,6 +51,16 @@ function(Foo2 argList)
     message(STATUS "argv1: " ${ARGV1})
     message(STATUS "argv2: " ${ARGV2})
 #    message(STATUS "argv3: " ${ARGV3})
-endfunction(Foo2)
+endfunction()
 
 Foo2(A1 A2 A3)
+
+# arguments with specific name
+function(Foo3 argument_1 argList)
+    message(STATUS "foo3 is called")
+    message(STATUS "argument_1 is " ${argument_1})
+    message(STATUS "argList is " ${argList})
+    message(STATUS "optional argument is " ${ARGN})
+endfunction()
+
+Foo3(bbbb cccc dddd) # dddd is the optional argument
