--- a/lib/shared/part_2/CMakeLists.txt
+++ b/lib/shared/part_2/CMakeLists.txt
@@ -3,6 +3,11 @@ target_include_directories(${SHARED_LIB_TARGET}
     ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
+#set(part2_src_list
+#    ${CMAKE_CURRENT_SOURCE_DIR}/test_lib_b2.cpp
+#    ${CMAKE_CURRENT_SOURCE_DIR}/test_lib_b3.cpp
+#)
+
 # auto scan all the source files within the current directory
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} part2_src_list)
 
