add condition compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,16 @@ else()
     set(LASAN "") # no lasan lib is add in release mode
 endif()
 
+#-------- options -----------
+option(MAIN_FEATURE_1_CONTROL "main feature 1" ON)
+
+if(${MAIN_FEATURE_1_CONTROL} STREQUAL "ON")
+    add_definitions(-DMAIN_FEATURE_1)
+endif()
+set(LIB_FEATURE "feature_2")
+
+#--------macro defintions
+add_definitions(-DMAIN_FEATURE_2)
 
 add_subdirectory(lib)
 add_subdirectory(cmake_cmds)
@@ -41,6 +51,10 @@ add_executable(test5 src/test5.cpp)
 target_link_libraries(test5 PUBLIC ${LASAN} MyLibB MyLibC)
 target_compile_options(test5 PUBLIC ${GNU_FLAGS})
 
+add_executable(test6 src/test6.cpp)
+target_link_libraries(test6 PUBLIC ${LASAN} MyLibA)
+target_compile_options(test6 PUBLIC ${GNU_FLAGS})
+
 #----- access global variable ----
 message(STATUS "Var2 is " ${VAR2})
 
@@ -49,3 +63,5 @@ file(GLOB_RECURSE lib_b_header ${CMAKE_CURRENT_SOURCE_DIR}/lib/shared/*.h)
 foreach(filename ${lib_b_header})
     message(STATUS "header file is: " ${filename})
 endforeach()
+
+#-------- install static library -----------
